# quick-memo-app

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: cd.yml  ci.yml  security.yml
src/: app.rs  main.rs  state.rs
src/components/: editor.rs  icons.rs  memo_list.rs  mod.rs  toolbar.rs
src/config/: constants.rs  fonts.rs  mod.rs
src/models/: memo.rs
src/storage/: auto_save.rs  memo_storage.rs  mod.rs
