[package]
name = "quick-memo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
eframe = "0.29.1"
egui = "0.29.1"
global-hotkey = "0.6.3"
parking_lot = "0.12.3"
rfd = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
winit = "0.30.5"
